tools/common/errors/tests/mod.rs
//! Tests for the errors module
//!
//! This module contains tests for the errors in the common errors library.

// Unit tests
pub mod unit;

// Integration tests (can be added when needed)
pub mod integration;

// Property-based tests (can be added when needed)
pub mod property;